# SET09121_labs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib_ecm/: ecm.cpp  ecm.h
lib_maths/: maths.h
lib_tile_level_loader/: levelsystem.cpp  levelsystem.h
practical_1/: main.cpp  questions.txt
practical_2/: bullet.cpp  bullet.h  game.h  main.cpp  ship.cpp  ship.h
practical_3/: entity.cpp  entity.h  main.cpp  player.cpp  player.h
practical_4/: cmp_actor_movement.cpp  cmp_actor_movement.h  cmp_enemy_ai.cpp  cmp_enemy_ai.h  cmp_ghost_movement.cpp  cmp_ghost_movement.h  cmp_pickup.cpp  cmp_pickup.h  cmp_player_movement.cpp  cmp_player_movement.h  cmp_sprite.cpp  cmp_sprite.h  entity.cpp  entity.h  entityManager.cpp  entityManager.h  ghost.cpp  ghost.h  main.cpp  pacman.cpp  pacman.h  player.cpp  player.h  scene.cpp  scene.h  system_renderer.cpp  system_renderer.h
practical_5/: main.cpp
res/: pacman.txt
